[gd_scene load_steps=3 format=3 uid="uid://26gyqrboxy1k"]

[ext_resource type="Script" path="res://addons/aws-amplify/ui/auth_form.gd" id="1_7j042"]
[ext_resource type="PackedScene" uid="uid://s67h7oeyu0n6" path="res://addons/aws-amplify/ui/password_with_button.tscn" id="2_10omg"]

[node name="AuthForm" type="Control"]
custom_minimum_size = Vector2(400, 500)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_7j042")
metadata/_edit_use_anchors_ = true

[node name="AuthTab" type="TabContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_right = 400.0
offset_bottom = 500.0
size_flags_vertical = 3
current_tab = 0

[node name="SignInContainer" type="MarginContainer" parent="AuthTab"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 32
metadata/_tab_index = 0

[node name="SignIn" type="VBoxContainer" parent="AuthTab/SignInContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SignInTitle" type="Label" parent="AuthTab/SignInContainer/SignIn"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Connect to your account"

[node name="SignInEMailPassword" type="VBoxContainer" parent="AuthTab/SignInContainer/SignIn"]
layout_mode = 2
size_flags_vertical = 0

[node name="SignInEmailLabel" type="Label" parent="AuthTab/SignInContainer/SignIn/SignInEMailPassword"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
text = "Enter your e-mail address:"

[node name="SignInEMail" type="LineEdit" parent="AuthTab/SignInContainer/SignIn/SignInEMailPassword"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter your e-mail address"
virtual_keyboard_type = 5
caret_blink = true

[node name="SignInPasswordLabel" type="Label" parent="AuthTab/SignInContainer/SignIn/SignInEMailPassword"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
text = "Enter your password:"

[node name="SignInPasswordContainer" parent="AuthTab/SignInContainer/SignIn/SignInEMailPassword" instance=ExtResource("2_10omg")]
unique_name_in_owner = true
layout_mode = 2

[node name="SignInRememberMeContainer" type="HBoxContainer" parent="AuthTab/SignInContainer/SignIn/SignInEMailPassword"]
visible = false
layout_mode = 2

[node name="SignInRememberMeLabel" type="Label" parent="AuthTab/SignInContainer/SignIn/SignInEMailPassword/SignInRememberMeContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 12
text = "Remember me: "

[node name="SignInRememberMe" type="CheckButton" parent="AuthTab/SignInContainer/SignIn/SignInEMailPassword/SignInRememberMeContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SignInError" type="Label" parent="AuthTab/SignInContainer/SignIn"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
autowrap_mode = 2

[node name="SignInButton" type="Button" parent="AuthTab/SignInContainer/SignIn"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_vertical = 0
text = "Connect"

[node name="SignInSignUp" type="HBoxContainer" parent="AuthTab/SignInContainer/SignIn"]
layout_mode = 2

[node name="SignInSignUpLabel" type="Label" parent="AuthTab/SignInContainer/SignIn/SignInSignUp"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Don't have an account? "

[node name="SignInSignUpLink" type="LinkButton" parent="AuthTab/SignInContainer/SignIn/SignInSignUp"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 12
text = "Sign-In"

[node name="SignInForgotPassword" type="HBoxContainer" parent="AuthTab/SignInContainer/SignIn"]
layout_mode = 2

[node name="SignInForgotPasswordLabel" type="Label" parent="AuthTab/SignInContainer/SignIn/SignInForgotPassword"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Forgot your password?"

[node name="SignInForgotPasswordLink" type="LinkButton" parent="AuthTab/SignInContainer/SignIn/SignInForgotPassword"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 12
text = "Reset Password"

[node name="ForgotPasswordConfirm" type="VBoxContainer" parent="AuthTab/SignInContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="ForgotPasswordConfirmTitle" type="Label" parent="AuthTab/SignInContainer/ForgotPasswordConfirm"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Reset password code"

[node name="ForgotPasswordConfirmGuidance" type="Label" parent="AuthTab/SignInContainer/ForgotPasswordConfirm"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Check you e-mail box. You should have received an e-mail with a verification code. Enter the code below and click on the verify button."
autowrap_mode = 2

[node name="ForgotPasswordConfirmLabel" type="Label" parent="AuthTab/SignInContainer/ForgotPasswordConfirm"]
layout_mode = 2
text = "Enter verification code:"

[node name="ForgotPasswordConfirmCode" type="LineEdit" parent="AuthTab/SignInContainer/ForgotPasswordConfirm"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
placeholder_text = "Enter verification code"
caret_blink = true

[node name="ForgotPasswordConfirmPasswordLabel" type="Label" parent="AuthTab/SignInContainer/ForgotPasswordConfirm"]
layout_mode = 2
text = "Enter new password:"

[node name="ForgotPasswordConfirmPassword" parent="AuthTab/SignInContainer/ForgotPasswordConfirm" instance=ExtResource("2_10omg")]
unique_name_in_owner = true
layout_mode = 2

[node name="ForgotPasswordConfirmPasswordConfirmationLabel" type="Label" parent="AuthTab/SignInContainer/ForgotPasswordConfirm"]
layout_mode = 2
text = "Confirm new password:"

[node name="ForgotPasswordConfirmPasswordConfirmation" parent="AuthTab/SignInContainer/ForgotPasswordConfirm" instance=ExtResource("2_10omg")]
unique_name_in_owner = true
layout_mode = 2

[node name="ForgotPasswordConfirmError" type="Label" parent="AuthTab/SignInContainer/ForgotPasswordConfirm"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
autowrap_mode = 2

[node name="ForgotPasswordConfirmButton" type="Button" parent="AuthTab/SignInContainer/ForgotPasswordConfirm"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "Confirm"

[node name="ForgotPasswordConfirmSendCode" type="HBoxContainer" parent="AuthTab/SignInContainer/ForgotPasswordConfirm"]
layout_mode = 2

[node name="ForgotPasswordConfirmSendCodeLabel" type="Label" parent="AuthTab/SignInContainer/ForgotPasswordConfirm/ForgotPasswordConfirmSendCode"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Didn't receive the code? "

[node name="ForgotPasswordConfirmSendCodeLink" type="LinkButton" parent="AuthTab/SignInContainer/ForgotPasswordConfirm/ForgotPasswordConfirmSendCode"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Re-send code"

[node name="SignUpContainer" type="MarginContainer" parent="AuthTab"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 32
metadata/_tab_index = 1

[node name="SignUp" type="VBoxContainer" parent="AuthTab/SignUpContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SignUpTitle" type="Label" parent="AuthTab/SignUpContainer/SignUp"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Register a new account"

[node name="SignUpGuidance" type="Label" parent="AuthTab/SignUpContainer/SignUp"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Enter an e-mail and a password. You will receive an e-mail with a code to verify your identity."
autowrap_mode = 2

[node name="SignUpEMailPassword" type="VBoxContainer" parent="AuthTab/SignUpContainer/SignUp"]
layout_mode = 2
size_flags_vertical = 0

[node name="SignUpEmailLabel" type="Label" parent="AuthTab/SignUpContainer/SignUp/SignUpEMailPassword"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
text = "Enter you e-mail address:"

[node name="SignUpEmailLabel" type="Label" parent="AuthTab/SignUpContainer/SignUp/SignUpEMailPassword/SignUpEmailLabel"]
custom_minimum_size = Vector2(0, 24)
text = "Enter you e-mail address:"

[node name="SignUpEMail" type="LineEdit" parent="AuthTab/SignUpContainer/SignUp/SignUpEMailPassword"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../SignUpPasswordContainer/SignUpPassword")
placeholder_text = "Enter your e-mail address"
caret_blink = true

[node name="SignUpPasswordLabel" type="Label" parent="AuthTab/SignUpContainer/SignUp/SignUpEMailPassword"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
text = "Enter your password:"

[node name="SignUpPassword" parent="AuthTab/SignUpContainer/SignUp/SignUpEMailPassword" instance=ExtResource("2_10omg")]
unique_name_in_owner = true
layout_mode = 2

[node name="SignUpPasswordConfirmationLabel" type="Label" parent="AuthTab/SignUpContainer/SignUp/SignUpEMailPassword"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
text = "Confirm your password:"

[node name="SignUpPasswordConfirmation" parent="AuthTab/SignUpContainer/SignUp/SignUpEMailPassword" instance=ExtResource("2_10omg")]
unique_name_in_owner = true
layout_mode = 2

[node name="SignUpError" type="Label" parent="AuthTab/SignUpContainer/SignUp"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
autowrap_mode = 2

[node name="SignUpButton" type="Button" parent="AuthTab/SignUpContainer/SignUp"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_vertical = 0
text = "Register"

[node name="SignUpSignIn" type="HBoxContainer" parent="AuthTab/SignUpContainer/SignUp"]
layout_mode = 2

[node name="SignUpSignInLabel" type="Label" parent="AuthTab/SignUpContainer/SignUp/SignUpSignIn"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Already have an account? "

[node name="SignUpSignInLink" type="LinkButton" parent="AuthTab/SignUpContainer/SignUp/SignUpSignIn"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 12
text = "Log-In"

[node name="SignUpConfirmIdentity" type="HBoxContainer" parent="AuthTab/SignUpContainer/SignUp"]
layout_mode = 2

[node name="SignUpConfirmIdentityLabel" type="Label" parent="AuthTab/SignUpContainer/SignUp/SignUpConfirmIdentity"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Already received a code? "

[node name="SignUpConfirmIdentityLink" type="LinkButton" parent="AuthTab/SignUpContainer/SignUp/SignUpConfirmIdentity"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Confirm Sign-Up"

[node name="SignUpConfirm" type="VBoxContainer" parent="AuthTab/SignUpContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="SignUpConfirmTitle" type="Label" parent="AuthTab/SignUpContainer/SignUpConfirm"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Confirm Sign-Up"

[node name="SignUpConfirmGuidance" type="Label" parent="AuthTab/SignUpContainer/SignUpConfirm"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Check you e-mail box. You should have received an e-mail with a verification code. Enter the code below and click on the verify button."
autowrap_mode = 2

[node name="SignUpConfirmLabel" type="Label" parent="AuthTab/SignUpContainer/SignUpConfirm"]
layout_mode = 2
text = "Enter verification code:"

[node name="SignUpConfirmCode" type="LineEdit" parent="AuthTab/SignUpContainer/SignUpConfirm"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
placeholder_text = "Enter verification code"
caret_blink = true

[node name="SignUpConfirmError" type="Label" parent="AuthTab/SignUpContainer/SignUpConfirm"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
autowrap_mode = 2

[node name="SignUpConfirmButton" type="Button" parent="AuthTab/SignUpContainer/SignUpConfirm"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "Confirm"

[node name="SignUpConfirmSendCode" type="HBoxContainer" parent="AuthTab/SignUpContainer/SignUpConfirm"]
layout_mode = 2

[node name="SignUpConfirmSendCodeLabel" type="Label" parent="AuthTab/SignUpContainer/SignUpConfirm/SignUpConfirmSendCode"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Didn't receive the code? "

[node name="SignUpConfirmSendCodeLink" type="LinkButton" parent="AuthTab/SignUpContainer/SignUpConfirm/SignUpConfirmSendCode"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Re-send code"

[connection signal="pressed" from="AuthTab/SignInContainer/SignIn/SignInButton" to="." method="_on_sign_in_button_pressed"]
[connection signal="pressed" from="AuthTab/SignInContainer/SignIn/SignInSignUp/SignInSignUpLink" to="." method="_on_sign_in_sign_up_link_pressed"]
[connection signal="pressed" from="AuthTab/SignInContainer/SignIn/SignInForgotPassword/SignInForgotPasswordLink" to="." method="_forgot_password_confirm_link_pressed"]
[connection signal="draw" from="AuthTab/SignInContainer/ForgotPasswordConfirm" to="." method="_forgot_password_confirm_draw"]
[connection signal="hidden" from="AuthTab/SignInContainer/ForgotPasswordConfirm" to="." method="_forgot_password_confirm_hidden"]
[connection signal="pressed" from="AuthTab/SignInContainer/ForgotPasswordConfirm/ForgotPasswordConfirmButton" to="." method="_forgot_password_confirm_button_pressed"]
[connection signal="pressed" from="AuthTab/SignInContainer/ForgotPasswordConfirm/ForgotPasswordConfirmSendCode/ForgotPasswordConfirmSendCodeLink" to="." method="_forgot_password_confirm_send_code_link_pressed"]
[connection signal="pressed" from="AuthTab/SignUpContainer/SignUp/SignUpButton" to="." method="_on_sign_up_button_pressed"]
[connection signal="pressed" from="AuthTab/SignUpContainer/SignUp/SignUpSignIn/SignUpSignInLink" to="." method="_on_sign_up_sign_in_link_pressed"]
[connection signal="pressed" from="AuthTab/SignUpContainer/SignUp/SignUpConfirmIdentity/SignUpConfirmIdentityLink" to="." method="_on_sign_up_confirm_link_pressed"]
[connection signal="draw" from="AuthTab/SignUpContainer/SignUpConfirm" to="." method="_on_sign_up_confirm_draw"]
[connection signal="hidden" from="AuthTab/SignUpContainer/SignUpConfirm" to="." method="_on_sign_up_confirm_hidden"]
[connection signal="pressed" from="AuthTab/SignUpContainer/SignUpConfirm/SignUpConfirmButton" to="." method="_on_sign_up_confirm_button_pressed"]
[connection signal="pressed" from="AuthTab/SignUpContainer/SignUpConfirm/SignUpConfirmSendCode/SignUpConfirmSendCodeLink" to="." method="_on_sign_up_confirm_send_code_link_pressed"]
